--- a/src/Boyles.PowerShell.Common.csproj
+++ b/src/Boyles.PowerShell.Common.csproj
@@ -15,19 +15,20 @@
 	</PropertyGroup>
 
 	<PropertyGroup>
-		<Version>0.1.1-alpha</Version>
+		<VersionNumber>0.1.1</VersionNumber>
+		<Version>$(VersionNumber)-alpha</Version>
+		<FileVersion>$(VersionNumber)</FileVersion>
+		<AssemblyVersion>$(VersionNumber)</AssemblyVersion>
 	</PropertyGroup>
 
 	<PropertyGroup>
-		<PublishRepositoryUrl>true</PublishRepositoryUrl>
-		<EmbedUntrackedSources>true</EmbedUntrackedSources>
+		<PackageReadmeFile>README.md</PackageReadmeFile>
+		<PackageLicenseFile>LICENSE</PackageLicenseFile>
+		<IncludeSymbols>True</IncludeSymbols>
+		<SymbolPackageFormat>snupkg</SymbolPackageFormat>
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.SourceLink.GitHub" Version="8.0.0">
-		  <PrivateAssets>all</PrivateAssets>
-		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-		</PackageReference>
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 		<PackageReference Include="PowerShellStandard.Library" Version="5.1.1">
 			<PrivateAssets>All</PrivateAssets>
@@ -38,6 +39,17 @@
 		<None Update="powershell.png">
 			<Pack>True</Pack>
 			<PackagePath>\</PackagePath>
+		</None>
+	</ItemGroup>
+
+	<ItemGroup>
+		<None Include="..\LICENSE" Link="LICENSE">
+		  <Pack>True</Pack>
+		  <PackagePath>\</PackagePath>
+		</None>
+		<None Include="..\README.md" Link="README.md">
+		  <Pack>True</Pack>
+		  <PackagePath>\</PackagePath>
 		</None>
 	</ItemGroup>
 
